--- a/reports/final/final.tex
+++ b/reports/final/final.tex
@@ -60,12 +60,16 @@ We used Gimp to create all of the artwork for the game. We had to balance the pe
 Animations were added for certain actions, such as player death, shooting, and the idle snail movements. These were simply added to make the game more interesting for players waiting for their turn; instead of simply watching a static screen, there would always be movement. However, it was decided early on that player and enemy movement should be fairly simple to implement, which was one of the reasons for choosing ghosts and snails (both using a gliding motion to move - no additional moving parts).
 
 \subsection{Front end}
+Front end of the website uses quite obviously HTML. This is provided by the server using the template feature of Django. As this is a game we need the pages to be highly dynamic which means that we also use a lot of Javascript. Getting a list of players in a game or animating movement of ghosts are just two examples of where we use Javascript.
 
+A lot of the client-side code is to do with fetching information from the server and displaying it in some form. We chose to poll the server every second for the list of players in a game which hasn't even started yet as well as for the latest game state. This is a good trade-off between putting a high load on the server and having a responsive application. To be honest, this is probably a sweet spot for the polling interval as even our turn-based game feels like a real-time one.
+
+Rest of the front end code handles displaying the game to the user which means animating pre-made sprites as well as drawing some graphics straight in the browser using a Javascript library built on top of the HTML5 canvas element (paper.js).
 
 \subsection{Back end}
 As mentioned before, the back end of the application uses Python's Django framework. Django is used for keeping track of players and games, producing HTML page output and communicating with the Javascript framework using JSON responses. Sessions are used to associate website users with player entities.
 
-The application is deployed on a cloud platform Heroku. Using Heroku (heroku.com) as a hosting is only a little bit harder than pushing into a remote Git repository. Data used by the backend is stored in a MySQL database which is provided by Xeround (xeround.com). Research suggests that using an external database solution as compared to Heroku's own PostgreSQL server. As this game is just a university assignment we are using free plans of both of these services which work well however their overall performance would not suffice to support a big number of users of our website.
+The application is deployed on a cloud platform Heroku. Using Heroku (heroku.com) as a hosting is only a little bit harder than pushing into a remote Git repository. Data used by the backend is stored in a MySQL database which is provided by Xeround (xeround.com). Research suggests that using an external database solution as compared to Heroku's own PostgreSQL server leads to higher performance of a Heroku app. As this game is just a university assignment we are using free plans of both of these services which work well however their overall performance would not suffice to support a big number of users of our website.
 
 The game works quite well using just the web browser base front-end. However, to provide multiplayer version and ensuring that players don't cheat the server-side component of the game is needed. Clients poll the server for new data every second and synchronise their game states with the server. The whole game state as well as the latest action of the players is returned by the server. This way we can provide nice animations for only the things which changed while making sure the game state is consistent across all the players. In order to make the processing of server responses easy on the front end we are often sending JSON formatted Javascript objects back to clients.
 
