--- a/reports/final/final.tex
+++ b/reports/final/final.tex
@@ -63,29 +63,23 @@ Animations were added for certain actions, such as player death, shooting, and t
 
 
 \subsection{Back end}
-As mentioned before, the back end of the application uses Python's Django framework. Django is used for keeping track of players and games, producing HTML page output and communicating with the Javascript framework using JSON responses. Sessions are used to associate website users with player entities.
-
-The application is deployed on a cloud platform Heroku. Using Heroku (heroku.com) as a hosting is only a little bit harder than pushing into a remote Git repository. Data used by the backend is stored in a MySQL database which is provided by Xeround (xeround.com). Research suggests that using an external database solution as compared to Heroku's own PostgreSQL server. As this game is just a university assignment we are using free plans of both of these services which work well however their overall performance would not suffice to support a big number of users of our website.
-
-The game works quite well using just the web browser base front-end. However, to provide multiplayer version and ensuring that players don't cheat the server-side component of the game is needed. Clients poll the server for new data every second and synchronise their game states with the server. The whole game state as well as the latest action of the players is returned by the server. This way we can provide nice animations for only the things which changed while making sure the game state is consistent across all the players. In order to make the processing of server responses easy on the front end we are often sending JSON formatted Javascript objects back to clients.
-
-The server is also responsible for calculating players' scores. The scores depend on the number of turns players survive, number of players in the game and the actions the players take. For example, moving while carrying an ammo box gives a player higher score than when they are just moving. This is to support team play and planning.
-
-Another role of the server closely related to calculating scores is storing them in the form of leaderboards. Each player's score is saved to the database along with the player's name and available for viewing anytime.
-
-As mentioned before, the server validates all player actions and disconnects players who try to execute invalid actions. Invalid actions such as trying to reload when the ammo box is in a different room are not possible to do from the game interface which means that if a request comes from a player trying to do this it must be someone who is cheating.
+As mentioned before, the back end of the application uses Python's Django framework. Django is used for keeping track of players and games, producing HTML page output and communicating with the Javascript framework using JSON responses. Sessions are used to associate website users withe player entities. \\ \\
+The application is deployed on the cloud platform 'Heroku'. Using Heroku (heroku.com) as a hosting is only a little bit harder than pushing to a remote Git repository. Data used by the backend is stored in a MySQL database which is provided by Xeround (xeround.com). Research suggests that using an external database solution as compared to Heroku's own PostgreSQL server. As this game is just a university assignment we are using free plans of both of these services, which work well. However, their overall performance would not be sufficient to support a large number of users on our website. \\ \\
+The game works quite well using just the web browser base front-end. However, to provide a multiplayer version and to ensure that players don't cheat, the server-side component of the game is needed. Clients poll the server for new data every second, and synchronise their game states with the server. The whole game state is returned by the server, along with the action of the latest player. This way we can provide nice animations for only the things which changed, while making sure the game state is consistent across all the players. In order to make the processing of server responses easy on the front end, we are often sending JSON formatted Javascript objects back to clients. \\ \\
+The server is also responsible for calculating players' scores, which will ensure no cheating in order to scheive a high score. The scores depend on the number of turns players survive, the number of players in the game, and the actions the players take. For example, moving while carrying an ammo box gives a player higher score than when they are just moving. This is to support team play and planning. \\ \\
+Another server role closely related to calculating scores is storing them in the form of leaderboards. Each player's score is saved to the database along with the player's name. This is available for viewing at any time. \\ \\
+As mentioned before, the server validates all player actions and disconnects players who try to execute invalid actions. Invalid actions such as trying to reload when the ammo box is in a different room are not possible to do from the game interface which means that if a request comes from a player trying to do this it must be someone who is cheating. \\ \\
 
 \subsection{Acknowledgements}
-We used Twitter Bootstrap CSS, Javascript, and glyphicons for the website layout. We also used some Javascript libraries: jQuery and Paper.js, for DOM (Document Object Model) handling, AJAX calls and for working with the HTML5 canvas. The Django framework was used for the server-side part of the website. All of the artwork within the canvas is original.
+We used Twitter Bootstrap CSS, Javascript, and glyphicons for the website layout. We also used some Javascript libraries: jQuery and Paper.js, for DOM (Document Object Model) handling, AJAX calls and for working with the HTML5 canvas. The Django framework was used for the server-side part of the website. All of the artwork within the canvas is original. \\ \\
 
 \section{Conclusion}
-TODO: done, not done, would do differently in future, learned from the project \\ \\
-In conclusion, we have made a vibrant graphical representation for our game. The game semantics are fun and provide for an enjoyable experience in every game. Our system allows players with very bad connecitons to play with each other and easily find their friends to play with. Players can have their skills represented as a score, and judge themselves against the best players. Players can also close their browser, or lose connection, and they can still recover the game as long as they return before they die. \\ \\
-Also, because the packets transmitted by our server are relatively lightweight (no more than a couple of kilobytes if there are many snails spawned in the game), and the packets are only sent once a second, many games should be able be played simultaneously on the server without error. \\ \\
-Sadly, we have not implemented a chat system as we planned. The main reason for this is because it was hard to find a place for it on the game screen that would not detract from more crucial controls and information. However, the time that  could have been spent implementing chat has been (we think) better spent by improving the animations of the game. Another benefit of not having chat is that the packets sent from the server are even more lightweight, as most of the information is integer or boolean. Strings from the chat, would have made the packets many times larger as strings themselves are large datatypes, but also all of the previous messages would need to be included to allow players to recover chat if they disconnected. \\ \\
+In conclusion, we have acheived all of the goals that we set out to fulfil. We have made a vibrant graphical representation for our game. The game semantics are fun, and provide for an enjoyable experience in every game. Our system allows players with very bad connections to play with each other and easily find their friends to play with. Players can have their skills represented as a score, and judge themselves against the best players. Players can also recover  their game from accidentally closig their browser, or losing connection, as long as they return before they die. \\ \\
+Also, because the packets transmitted by our server are relatively lightweight (no more than a couple of kilobytes, if there are many snails spawned in the game) and the packets are only sent once a second, many games should be able be played simultaneously on the server without error. \\ \\
+Sadly, we have not implemented a chat system as we planned. The main reason for this is because it was hard to find a place for it on the game screen that would not detract from more crucial controls and information. However, the time that  could have been spent implementing chat has been (we think) better spent by improving the animations of the game. Another benefit of not having chat is that the packets sent from the server are even more lightweight, as most of the information is an integer or boolean. Strings from the chat would have made the packets many times larger - since strings themselves are large datatypes - but also all of the previous messages would need to be included to allow players to recover chat if they disconnected. \\ \\
 \textbf{What we have learned} \\
 We only started using Pivotal tracker after the milestone report, when it was suggested we use some project management software. We were sceptical at first, but after using it for a week or so it has been noticably beneficial to the project. Not only was it helpful to assign work to each other and to keep the work organised, but also to predict what stages we should be at, by monitoring our working velocity. \\ \\
 \textbf{What we would do differently in future} \\
-If we were to do this project again, we would need to organise ourselves more effectively in the early stages of development. For example, had the team members working on the client and the server communicated more effectively, many parts of the code could have been considerably cleaner. \\
-Also, there are one or two different features that we would have liked to add to the game, to expand it. For example, a chat feature would have been useful for co-ordinating team movements. The ability to pick or customise player characters could help to make the game more immersive, and, if we were to develop this game much more for distribution, it could help to add a login system to keep track of personal best scores and other individual player stats.
+If we were to do this project again, we would need to organise ourselves more effectively in the early stages of development. For example, had the team members working on the client and the server communicated more effectively, many parts of the code could have been considerably cleaner. \\ \\
+Also, there are one or two different features that we would have liked to add to the game, to expand it. The ability to pick or customise player characters could help to make the game more immersive, and, if we were to develop this game much more for distribution, it could help to add a login system to keep track of personal best scores and other individual player stats.
 \end{document}
