--- a/reports/final/final.tex
+++ b/reports/final/final.tex
@@ -92,4 +92,43 @@ We only started using Pivotal tracker after the milestone report, when it was su
 \textbf{What we would do differently in future} \\
 If we were to do this project again, we would need to organise ourselves more effectively in the early stages of development. For example, had the team members working on the client and the server communicated more effectively, many parts of the code could have been considerably cleaner. \\
 Also, there are one or two different features that we would have liked to add to the game, to expand it. For example, a chat feature would have been useful for co-ordinating team movements. The ability to pick or customise player characters could help to make the game more immersive, and, if we were to develop this game much more for distribution, it could help to add a login system to keep track of personal best scores and other individual player stats.
+
+\section{Appendix: Screenshots}
+
+\begin{figure}[htb]
+\centering
+\includegraphics[width=1.0\textwidth]{index.jpg}
+\caption{The welcome page}
+\end{figure}
+
+\begin{figure}[htb]
+\centering
+\includegraphics[width=1.0\textwidth]{create.jpg}
+\caption{The screen for creating a game}
+\end{figure}
+
+\begin{figure}[htb]
+\centering
+\includegraphics[width=1.0\textwidth]{join.jpg}
+\caption{The screen for joining a game}
+\end{figure}
+
+\begin{figure}[htb]
+\centering
+\includegraphics[width=1.0\textwidth]{game-1.jpg}
+\caption{Game}
+\end{figure}
+
+\begin{figure}[htb]
+\centering
+\includegraphics[width=1.0\textwidth]{game-2.jpg}
+\caption{Game}
+\end{figure}
+
+\begin{figure}[htb]
+\centering
+\includegraphics[width=1.0\textwidth]{game-3.jpg}
+\caption{Game}
+\end{figure}
+
 \end{document}
