--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -8,7 +8,7 @@
 
 \AtBeginSection
 {
-  \begin{frame}{Contents}
+  \begin{frame}{Outline}
     \tableofcontents[currentsection]
   \end{frame}
 }
@@ -34,21 +34,66 @@
 \end{frame}
 
 \begin{frame}{Pivotal Tracker}
+  Clear structure.
+  \begin{figure}[htb]
+    \centering
+    \includegraphics[scale=0.25]{pivotal.png}
+    \caption{Look at the nice tracker}
+  \end{figure}
 \end{frame}
 
 \section{Implementation Languages}
 \subsection{Client}
 
-\begin{frame}{Title}
+\begin{frame}{Javascript}
+  [insert map of components and interactions.]
+  \begin{itemize}
+    \item Suitable for purpose
+    \item It's nice
+    \item We like it
+    \item Also paper.js
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{HTML5}
+  [insert map of components and interactions.]
+  \begin{itemize}
+    \item Suitable for purpose
+    \item It's nice
+    \item We like it
+  \end{itemize}
 \end{frame}
 
 \subsection{Server}
 
-\begin{frame}{Title}
+\begin{frame}{Django}
+  [insert map of components and interactions.]
+  \begin{itemize}
+    \item Suitable for purpose
+    \item It's nice
+    \item We like it
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Heroku}
+  [insert map of components and interactions.]
+  \begin{itemize}
+    \item Suitable for purpose
+    \item It's nice
+    \item We like it
+  \end{itemize}
 \end{frame}
 
 
 \section{The Game}
+\subsection{Aesthetics}
+
+\begin{frame}{User Interface}
+\end{frame}
+
+\begin{frame}{Art and Animation}
+\end{frame}
+
 \subsection{Game Background}
 
 \begin{frame}{Background Story}
@@ -73,6 +118,7 @@
 \section{Conclusion}
 
 \begin{frame}{Conclusion}
+  [insert reflection on project outcomes.]
 \end{frame}
 
 \end{document}
