more minor things

--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -64,10 +64,10 @@
 \end{frame}
 
 \begin{frame}{Pivotal Tracker}
-  Clear structure.
-  \begin{figure}[htb]
+  Clear structure.\\
+  \begin{figure}[hb]
     \centering
-    \includegraphics[scale=0.25]{pivotal.png}
+    \includegraphics[scale=0.2]{pivotal.png}
     \caption{Look at the nice tracker}
   \end{figure}
 \end{frame}
