--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -137,19 +137,18 @@
 \begin{frame}{Javascript}
   [insert map of components and interactions.]
   \begin{itemize}
-    \item Suitable for purpose
-    \item It's nice
-    \item We like it
-    \item Also paper.js
+    \item Only client side script supported by all browsers
+    \item More stable than using plugins
+    \item HTML5 graphics libraries available (we used paper.js)
   \end{itemize}
 \end{frame}
 
 \begin{frame}{HTML5}
   [insert map of components and interactions.]
   \begin{itemize}
-    \item Suitable for purpose
-    \item It's nice
-    \item We like it
+    \item Technology for the future.
+    \item No need to install plugins with modern broswers.
+    \item Faster, less likely to crash than plugins.
   \end{itemize}
 \end{frame}
 
@@ -158,7 +157,7 @@
 \begin{frame}{Django}
   [insert map of components and interactions.]
   \begin{itemize}
-    \item Suitable for purpose
+    \item Easy ajax.
     \item It's nice
     \item We like it
   \end{itemize}
@@ -167,9 +166,9 @@
 \begin{frame}{Heroku}
   [insert map of components and interactions.]
   \begin{itemize}
-    \item Suitable for purpose
-    \item It's nice
-    \item We like it
+    \item Free hosting service available.
+    \item Supports Django, unlike doc.
+    \item Easy deployment - just push to a git repository.
   \end{itemize}
 \end{frame}
 
