--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -13,6 +13,23 @@
   \end{frame}
 }
 
+\defbeamertemplate*{footline}{my infolines theme}
+{
+    \leavevmode%
+        \hbox{%
+            \begin{beamercolorbox}[wd=.333333\paperwidth,ht=2.25ex,dp=1ex,center]{author in head/foot}%
+                \usebeamerfont{author in head/foot}\insertshortauthor~~\insertshortinstitute
+                \end{beamercolorbox}%
+                \begin{beamercolorbox}[wd=.333333\paperwidth,ht=2.25ex,dp=1ex,center]{title in head/foot}%
+                \usebeamerfont{title in head/foot}\insertshorttitle
+                \end{beamercolorbox}%
+                \begin{beamercolorbox}[wd=.333333\paperwidth,ht=2.25ex,dp=1ex,right]{date in head/foot}%
+                \usebeamerfont{date in head/foot}\insertshortdate{}\hspace*{2em}
+            \insertframenumber{} / \inserttotalframenumber\hspace*{2ex} 
+            \end{beamercolorbox}}%
+                \vskip0pt%
+}
+
 \begin{document}
 
 \begin{frame}
@@ -110,15 +127,15 @@
 \section{Group Management}
 
 \begin{frame}{Git}
+  We love Git
 \end{frame}
 
 \begin{frame}{Pivotal Tracker}
   Clear structure.\\
-  \begin{figure}[hb]
-    \centering
-    \includegraphics[scale=0.2]{pivotal.png}
-    \caption{Pivotal Tracker main screen}
-  \end{figure}
+  \begin{center}
+    \includegraphics[scale=0.25]{pivotal.png} \\
+    Pivotal Tracker main screen
+  \end{center}
 \end{frame}
 
 \begin{frame}{Pivotal Tracker}
