--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -170,8 +170,10 @@
 \end{frame}
 
 \begin{frame}{HTML5}
-  TODO:
-  [insert map of components and interactions.]
+  \begin{figure}[HTML5]
+    \centering
+    \includegraphics[scale=0.25]{HTML5_Logo_512.png}
+  \end{figure}
   \begin{itemize}
     \item Technology for the future.
     \item No need to install plugins with modern broswers.
@@ -202,11 +204,24 @@
 \end{frame}
 
 
+\section{Possible Extentions}
+\begin{frame}{Heroku}
+  \begin{itemize}
+    \item Chat Feature.
+    \item Sound Effects.
+    \item Animations for barricade destruction.
+    \item Implement snails scaling the walls of the house and entering through the windows.
+  \end{itemize}
+\end{frame}
+
 \section{Conclusion}
 
 \begin{frame}{Conclusion}
-  TODO:
-  [insert reflection on project outcomes.]
+  \begin{itemize}
+    \item We are glad to have chosen languages we didn't know, it's been a worthwhile learning experience.
+    \item Using Pivotaltracker from the beginning would have been better.
+    \item In retrospect, it might have been better to save time by not creating all the artwork ourselves.
+  \end{itemize}
 \end{frame}
 
 \end{document}
