something for milan

--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -157,7 +157,9 @@
   [insert map of components and interactions.]
   \begin{itemize}
     \item Only client side script supported by all browsers
+    \vspace{\baselineskip}
     \item More stable than using plugins
+    \vspace{\baselineskip}
     \item HTML5 graphics libraries available (we used paper.js)
   \end{itemize}
 \end{frame}
@@ -167,7 +169,9 @@
   [insert map of components and interactions.]
   \begin{itemize}
     \item Technology for the future.
+    \vspace{\baselineskip}
     \item No need to install plugins with modern broswers.
+    \vspace{\baselineskip}
     \item Faster, less likely to crash than plugins.
   \end{itemize}
 \end{frame}
@@ -179,7 +183,9 @@
   [insert map of components and interactions.]
   \begin{itemize}
     \item Powerful database
+    \vspace{\baselineskip}
     \item It's nice
+    \vspace{\baselineskip}
     \item We like it
   \end{itemize}
 \end{frame}
@@ -189,7 +195,9 @@
   [insert map of components and interactions.]
   \begin{itemize}
     \item Free hosting service available.
+    \vspace{\baselineskip}
     \item Supports Django, unlike doc.
+    \vspace{\baselineskip}
     \item Easy deployment - just push to a git repository.
   \end{itemize}
 \end{frame}
