Fixed possible extentions title

--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -198,7 +198,7 @@
 
 
 \section{Possible Extentions}
-\begin{frame}{Heroku}
+\begin{frame}{Possible Extentions}
   \begin{itemize}
     \item Chat Feature.
     \item Sound Effects.
