Logos, logos everywhere

--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -174,26 +174,45 @@
 
 \subsection{Server}
 
-\begin{frame}{Django}
-  TODO:
+\begin{frame}{Backend Overview}
   [insert map of components and interactions.]
+\end{frame}
+
+\begin{frame}{Django}
+  Web framework for Python
   \begin{itemize}
-    \item Powerful database
-    \item It's nice
-    \item We like it
+    \item Powerful ORM (object relational mapping)
+    \item Template system
+    \item Rapid development
   \end{itemize}
+  \vspace{\baselineskip}
+  \begin{center}
+    \includegraphics[scale=0.05]{django.png} \\
+  \end{center}
 \end{frame}
 
 \begin{frame}{Heroku}
-  TODO:
-  [insert map of components and interactions.]
+  Webhosting solution
   \begin{itemize}
-    \item Free hosting service available.
-    \item Supports Django, unlike doc.
-    \item Easy deployment - just push to a git repository.
+    \item Supports Python/Django + many other frameworks, unlike DoC\ldots
+    \item Easy deployment - just push to a git repository
+    \item Free plan available
   \end{itemize}
+  \vspace{\baselineskip}
+  \begin{center}
+    \includegraphics[scale=0.25]{heroku.png} \\
+  \end{center}
 \end{frame}
 
+\begin{frame}{Xeround}
+  Database-as-a-service -- MySQL \\
+  \vspace{\baselineskip}
+  Some say that an external DB is faster than Heroku's own PostgreSQL
+  \vspace{\baselineskip}
+  \begin{center}
+    \includegraphics[scale=0.25]{xeround.png} \\
+  \end{center}
+\end{frame}
 
 \section{Conclusion}
 
