--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -220,8 +220,8 @@
   \end{center}
 \end{frame}
 
-\section{Possible Extentions}
-\begin{frame}{Possible Extentions}
+\section{Possible Extensions}
+\begin{frame}{Possible Extensions}
   \begin{itemize}
     \item Chat Feature.
     \item Sound Effects.
