Snail AI, other useful things

--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -178,6 +178,10 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Other useful things}
+  jQuery, Twitter Bootstrap, 960.gs
+\end{frame}
+
 \subsection{Server}
 
 \begin{frame}{Backend Overview}
@@ -185,10 +189,13 @@
 \end{frame}
 
 \begin{frame}{Django}
-  Web framework for Python
+  Web framework for Python \\
+  \vspace{\baselineskip}
   \begin{itemize}
     \item Powerful ORM (object relational mapping)
+    \vspace{\baselineskip}
     \item Template system
+    \vspace{\baselineskip}
     \item Rapid development
   \end{itemize}
   \vspace{\baselineskip}
@@ -198,10 +205,13 @@
 \end{frame}
 
 \begin{frame}{Heroku}
-  Webhosting solution
+  Webhosting solution \\
+  \vspace{\baselineskip}
   \begin{itemize}
     \item Supports Python/Django + many other frameworks, unlike DoC\ldots
-    \item Easy deployment - just push to a git repository
+    \vspace{\baselineskip}
+    \item Easy deployment -- just push to a git repository
+    \vspace{\baselineskip}
     \item Free plan available
   \end{itemize}
   \vspace{\baselineskip}
@@ -218,6 +228,16 @@
   \begin{center}
     \includegraphics[scale=0.25]{xeround.png} \\
   \end{center}
+\end{frame}
+
+\begin{frame}{Snail AI}
+  \begin{itemize}
+    \item Searching for ghosts: breadth-first search limited to depth of 5
+    \vspace{\baselineskip}
+    \item Random moves from time to time
+    \vspace{\baselineskip}
+    \item Caching of best actions for use by other snails in the same room
+  \end{itemize}
 \end{frame}
 
 \section{Possible Extentions}
