running out of commit messages

--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -76,6 +76,11 @@
         \item Create or fix a barricade
         \item Destroy a barricade
       \end{itemize}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Game Rules}
+  \begin{itemize}
     \item Players have limited ammo, and may not shoot when they have none left
     \item Players carrying the ammo box may only either move or drop the ammo box on their turn
     \item Players may not reload from a carried ammo box
@@ -162,6 +167,13 @@
     \vspace{\baselineskip}
     \item HTML5 graphics libraries available (we used paper.js)
   \end{itemize}
+\end{frame}
+
+\begin{frame}{JavaScript/HTML5 interaction}
+  \begin{center}
+    \includegraphics[scale=0.4]{game_html_structure.png} \\
+    game.html structure
+  \end{center}
 \end{frame}
 
 \begin{frame}{HTML5}
