--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -35,9 +35,9 @@
 \begin{frame}
   \titlepage
   \vspace{\baselineskip}
-  \begin{figure}
+  \begin{center}
     \includegraphics[scale=0.15]{snail_teeth.png}
-  \end{figure}
+  \end{center}
 \end{frame}
 
 \section{Introduction}
@@ -88,13 +88,13 @@
 \subsection{Aesthetics}
 
 \begin{frame}{Art and Animation}
-  \begin{figure}
-    \centering
+  \begin{center}
+    \includegraphics[scale=0.15]{snail_teeth.png}
     \includegraphics[scale=0.1]{../game/static/img/barricade_stairs.png}
     \includegraphics[scale=0.1]{../game/static/img/ghost_ammobox.png}
-    \includegraphics[scale=0.15]{snail_teeth.png}
-    \caption{Various graphics created for the game}
-  \end{figure}
+    \includegraphics[scale=0.15]{snail_teeth.png} \\
+    Various graphics created for the game
+  \end{center}
   \begin{itemize}
     \item Art - GIMP
       \hfill
@@ -165,10 +165,6 @@
 \end{frame}
 
 \begin{frame}{HTML5}
-  \begin{figure}[HTML5]
-    \centering
-    \includegraphics[scale=0.25]{HTML5_Logo_512.png}
-  \end{figure}
   \begin{itemize}
     \item Technology for the future.
     \vspace{\baselineskip}
@@ -176,6 +172,10 @@
     \vspace{\baselineskip}
     \item Faster, less likely to crash than plugins.
   \end{itemize}
+  \vspace{\baselineskip}
+  \begin{center}
+    \includegraphics[scale=0.1]{HTML5_Logo_512.png}
+  \end{center}
 \end{frame}
 
 \begin{frame}{Other useful things}
