--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -178,6 +178,18 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Graphics Optimisation}
+  \begin{figure}[Snails]
+    \centering
+    \includegraphics[scale=0.25]{SnailsScreenshot.png}
+  \end{figure}
+  \begin{itemize}
+    \item Render eye movement every 3 frames.
+    \item Cache snails as symbols.
+    \item Movement calm down
+  \end{itemize}
+\end{frame}
+
 \subsection{Server}
 
 \begin{frame}{Backend Overview}
