IAmA Commit Message

--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -107,6 +107,9 @@
     \item Animation - JavaScript/paper.js
       \hfill
       \includegraphics[scale=0.4]{paper_logo.png}
+      \begin{itemize}
+        \item (see Client Implementation for optimisations)
+      \end{itemize}
   \end{itemize}
 \end{frame}
 
@@ -178,11 +181,11 @@
 
 \begin{frame}{HTML5}
   \begin{itemize}
-    \item Technology for the future.
+    \item Technology for the future
     \vspace{\baselineskip}
-    \item No need to install plugins with modern broswers.
+    \item No need to install plugins with modern broswers
     \vspace{\baselineskip}
-    \item Faster, less likely to crash than plugins.
+    \item Faster, less likely to crash than plugins
   \end{itemize}
   \vspace{\baselineskip}
   \begin{center}
@@ -268,8 +271,11 @@
 \begin{frame}{Possible Extensions}
   \begin{itemize}
     \item Chat Feature.
+    \vspace{\baselineskip}
     \item Sound Effects.
+    \vspace{\baselineskip}
     \item Animations for barricade destruction.
+    \vspace{\baselineskip}
     \item Implement snails scaling the walls of the house and entering through the windows.
   \end{itemize}
 \end{frame}
@@ -277,11 +283,11 @@
 \section{Conclusion}
 
 \begin{frame}{Conclusion}
-  \begin{itemize}
-    \item We are glad to have chosen languages we didn't know, it's been a worthwhile learning experience.
-    \item Using Pivotaltracker from the beginning would have been better.
-    \item In retrospect, it might have been better to save time by not creating all the artwork ourselves.
-  \end{itemize}
+  We are glad to have chosen languages we didn't know; it has been a worthwhile learning experience.\\
+  \vspace{\baselineskip}
+  Discovering Pivotal Tracker earlier could have improved team co-ordination from the start.\\
+  \vspace{\baselineskip}
+  In retrospect, it might have been better to save time by not creating all the artwork ourselves.
 \end{frame}
 
 \end{document}
