--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -135,7 +135,15 @@
 \section{Group Management}
 
 \begin{frame}{Git}
-  We used Github to store our code
+
+\end{frame}
+
+\begin{frame}{Group Responsibilities}
+  \begin{itemize}
+    \item Milan: Website layout, server side code.
+    \item Jack: Client side game representation, game ideas/rules development, animation
+    \item Craig: Artwork, animation, game ideas/rules development
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Pivotal Tracker}
