--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -68,6 +68,7 @@
 \begin{frame}{Game Rules}
   \begin{itemize}
     \item Ghosts may chose one action to do per turn:
+    \vspace{\baselineskip}
       \begin{itemize}
         \item Move
         \item Shoot
@@ -207,8 +208,8 @@
     \includegraphics[scale=0.25]{SnailsScreenshot.png}
   \end{figure}
   \begin{itemize}
-    \item Render eye movement every 3 frames.
-    \item Cache snails as symbols.
+    \item Render eye movement every 3 frames
+    \item Cache snails as symbols
     \item Movement calm down
   \end{itemize}
 \end{frame}
@@ -216,7 +217,10 @@
 \subsection{Server}
 
 \begin{frame}{Backend Overview}
-  [insert map of components and interactions.]
+  \begin{center}
+    \includegraphics[scale=0.4]{client_server_structure.png}
+    Client/Server interaction
+  \end{center}
 \end{frame}
 
 \begin{frame}{Django}
@@ -271,7 +275,10 @@
   \end{itemize}
 \end{frame}
 
-\section{Possible Extensions}
+
+\section{Conclusion}
+\subsection{Possible Extensions}
+
 \begin{frame}{Possible Extensions}
   \begin{itemize}
     \item Chat Feature.
@@ -284,10 +291,10 @@
   \end{itemize}
 \end{frame}
 
-\section{Conclusion}
+\subsection{Reflection}
 
 \begin{frame}{Conclusion}
-  We are glad to have chosen languages we didn't know; it has been a worthwhile learning experience.\\
+  We are glad to have chosen languages we were less familiar with; it has been a worthwhile learning experience.\\
   \vspace{\baselineskip}
   Discovering Pivotal Tracker earlier could have improved team co-ordination from the start.\\
   \vspace{\baselineskip}
