--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -218,7 +218,7 @@
 
 \begin{frame}{Backend Overview}
   \begin{center}
-    \includegraphics[scale=0.4]{client_server_structure.png}
+    \includegraphics[scale=0.4]{client_server_structure.png} \\
     Client/Server interaction
   \end{center}
 \end{frame}
