these messages are just unimportant now

--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -43,11 +43,9 @@
 \section{Introduction}
 
 \begin{frame}{Introduction}
-  TODO:\\
+  This is a game about giant evil snails and ghosts with guns wearing magical hats.
   \vspace{\baselineskip}
-  We did a game about snails and we think it is pretty cool and you guys should probably check it out or something.\\
-  \vspace{\baselineskip}
-  I mean, no pressure, but it is pretty awesome.
+  It is a turn-based game, based around defending an objective; in this case, the ghosts' house.
 \end{frame}
 
 
@@ -95,7 +93,6 @@
 
 \begin{frame}{Art and Animation}
   \begin{center}
-    \includegraphics[scale=0.15]{snail_teeth.png}
     \includegraphics[scale=0.1]{../game/static/img/barricade_stairs.png}
     \includegraphics[scale=0.1]{../game/static/img/ghost_ammobox.png}
     \includegraphics[scale=0.15]{snail_teeth.png} \\
@@ -166,8 +163,6 @@
 \subsection{Client}
 
 \begin{frame}{Javascript}
-  TODO:
-  [insert map of components and interactions.]
   \begin{itemize}
     \item Only client side script supported by all browsers
     \vspace{\baselineskip}
