--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -199,7 +199,11 @@
 \end{frame}
 
 \begin{frame}{Other useful things}
-  jQuery, Twitter Bootstrap, 960.gs
+  \begin{itemize}
+    \item jQuery
+    \item Twitter Bootstrap
+    \item 960.gs
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Graphics Optimisation}
@@ -281,24 +285,24 @@
 
 \begin{frame}{Possible Extensions}
   \begin{itemize}
-    \item Chat Feature.
+    \item Chat Feature
     \vspace{\baselineskip}
-    \item Sound Effects.
+    \item Sound Effects
     \vspace{\baselineskip}
-    \item Animations for barricade destruction.
+    \item Animations for barricade destruction
     \vspace{\baselineskip}
-    \item Implement snails scaling the walls of the house and entering through the windows.
+    \item Implement snails scaling the walls of the house and entering through the windows
   \end{itemize}
 \end{frame}
 
 \subsection{Reflection}
 
 \begin{frame}{Conclusion}
-  We are glad to have chosen languages we were less familiar with; it has been a worthwhile learning experience.\\
+  We are glad to have chosen languages we were less familiar with; it has been a worthwhile learning experience\\
   \vspace{\baselineskip}
-  Discovering Pivotal Tracker earlier could have improved team co-ordination from the start.\\
+  Discovering Pivotal Tracker earlier could have improved team co-ordination from the start\\
   \vspace{\baselineskip}
-  In retrospect, it might have been better to save time by not creating all the artwork ourselves.
+  In retrospect, it might have been better to save time by not creating all the artwork ourselves
 \end{frame}
 
 \end{document}
