--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -43,7 +43,7 @@
 \section{Introduction}
 
 \begin{frame}{Introduction}
-  This is a game about giant evil snails and ghosts with guns wearing magical hats.
+  This is a game about giant evil snails and ghosts with guns wearing magical hats.\\
   \vspace{\baselineskip}
   It is a turn-based game, based around defending an objective; in this case, the ghosts' house.
 \end{frame}
