Added presentation PDF

--- a/reports/presentation.tex
+++ b/reports/presentation.tex
@@ -300,4 +300,10 @@
   In retrospect, it might have been better to save time by not creating all the artwork ourselves
 \end{frame}
 
+\begin{frame}{Thank you for listening}
+  \begin{center}
+    Any questions?
+  \end{center}
+\end{frame}
+
 \end{document}
